--- a/hackathon/webapp/templates/webapp/startupregistration.html
+++ b/hackathon/webapp/templates/webapp/startupregistration.html
@@ -192,47 +192,141 @@
 			          <span aria-hidden="true">&times;</span>
 			        </button>
 			      </div>
-			      <div class="modal-body">
-			      	<div class="container inner-form-custom">
-						<form>
-							<h4 class="form-title">Personal Details</h4>
-							<div class="form-group">
-							    <input type="text" class="form-control" id="firstName" placeholder="First Name" required="false" name="firstName">
-							</div>
-							<div class="form-group">
-							    <input type="text" class="form-control" id="lastName" placeholder="Last Name" required="false" name="lastName">
-							</div>
-							<div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon1">Date Of Birth</span>
+{#			      <div class="modal-body">#}
+{#			      	<div class="container inner-form-custom">#}
+{#						<form>#}
+{#							<h4 class="form-title">Personal Details</h4>#}
+{#							<div class="form-group">#}
+{#							    <input type="text" class="form-control" id="firstName" placeholder="First Name" required="false" name="firstName">#}
+{#							</div>#}
+{#							<div class="form-group">#}
+{#							    <input type="text" class="form-control" id="lastName" placeholder="Last Name" required="false" name="lastName">#}
+{#							</div>#}
+{#							<div class="input-group mb-3">#}
+{#                                <div class="input-group-prepend">#}
+{#                                    <span class="input-group-text" id="basic-addon1">Date Of Birth</span>#}
+{#                                </div>#}
+{#                                <div class="form-group">#}
+{#                                    <input type="text" class="form-control" id="address1"#}
+{#                                           placeholder="Address Line 1"#}
+{#                                           required="true" name="addressLine1">#}
+{#                                </div>#}
+{#                                <div class="form-group">#}
+{#                                    <input type="text" class="form-control" id="address2"#}
+{#                                           placeholder="Address Line 2"#}
+{#                                           required="true" name="addressLine2">#}
+{#                                </div>#}
+{#                                <div class="form-row">#}
+{#                                    <div class="form-group">#}
+{#                                        <input type="text" class="form-control" id="pincode"#}
+{#                                               placeholder="Pincode"#}
+{#                                               required="true" name="pincode">#}
+{#                                    </div>#}
+{#                                    <div class="form-group">#}
+{#                                        <input type="text" class="form-control" id="city" placeholder="City"#}
+{#                                               required="true" name="city">#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <div class="form-group">#}
+{#                                    <select class="custom-select" id="statesList" name="state">#}
+{#                                        <option value="">Select State</option>#}
+{#                                        <option value="Andaman and Nicobar Islands">Andaman and Nicobar#}
+{#                                            Islands#}
+{#                                        </option>#}
+{#                                        <option value="Andhra Pradesh">Andhra Pradesh</option>#}
+{#                                        <option value="Arunachal Pradesh">Arunachal Pradesh</option>#}
+{#                                        <option value="Assam">Assam</option>#}
+{#                                        <option value="Bihar">Bihar</option>#}
+{#                                        <option value="Chandigarh">Chandigarh</option>#}
+{#                                        <option value="Chhattisgarh">Chhattisgarh</option>#}
+{#                                        <option value="Dadra and Nagar Haveli">Dadra and Nagar Haveli</option>#}
+{#                                        <option value="Daman and Diu">Daman and Diu</option>#}
+{#                                        <option value="Delhi">Delhi</option>#}
+{#                                        <option value="Goa">Goa</option>#}
+{#                                        <option value="Gujarat">Gujarat</option>#}
+{#                                        <option value="Haryana">Haryana</option>#}
+{#                                        <option value="Himachal Pradesh">Himachal Pradesh</option>#}
+{#                                        <option value="Jammu and Kashmir">Jammu and Kashmir</option>#}
+{#                                        <option value="Jharkhand">Jharkhand</option>#}
+{#                                        <option value="Karnataka">Karnataka</option>#}
+{#                                        <option value="Kerala">Kerala</option>#}
+{#                                        <option value="Lakshadweep">Lakshadweep</option>#}
+{#                                        <option value="Madhya Pradesh">Madhya Pradesh</option>#}
+{#                                        <option value="Maharashtra">Maharashtra</option>#}
+{#                                        <option value="Manipur">Manipur</option>#}
+{#                                        <option value="Meghalaya">Meghalaya</option>#}
+{#                                        <option value="Mizoram">Mizoram</option>#}
+{#                                        <option value="Nagaland">Nagaland</option>#}
+{#                                        <option value="Orissa">Orissa</option>#}
+{#                                        <option value="Pondicherry">Pondicherry</option>#}
+{#                                        <option value="Punjab">Punjab</option>#}
+{#                                        <option value="Rajasthan">Rajasthan</option>#}
+{#                                        <option value="Sikkim">Sikkim</option>#}
+{#                                        <option value="Tamil Nadu">Tamil Nadu</option>#}
+{#                                        <option value="Tripura">Tripura</option>#}
+{#                                        <option value="Uttaranchal">Uttaranchal</option>#}
+{#                                        <option value="Uttar Pradesh">Uttar Pradesh</option>#}
+{#                                        <option value="West Bengal">West Bengal</option>#}
+{#                                    </select>#}
+{#                                </div>#}
+{#                                <div class="form-group">#}
+{#                                            <textarea class="form-control" id="experienceDesc"#}
+{#                                                      placeholder="Experience" name="experienceDesc"></textarea>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            </form>#}
+{#                        </div>#}
+{#                    </div>#}
+
+                     <div class="modal-body">
+                        <div class="container inner-form-custom">
+                            <form id="modal-member-form">
+                                <h4 class="form-title">Personal Details</h4>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="firstName" placeholder="First Name"
+                                           required="false" name="firstName">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="address1"
-                                           placeholder="Address Line 1"
+                                    <input type="text" class="form-control" id="lastName" placeholder="Last Name"
+                                           required="false" name="lastName">
+                                </div>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon1">Date Of Birth</span>
+                                    </div>
+                                    <input type="date" class="form-control" id="dateOfBirth" placeholder="Date of Birth"
+                                           required="false" name="dob">
+                                </div>
+                                <!-- </div> -->
+                                <div class="form-group">
+                                    <input type="email" class="form-control" id="personalEmail"
+                                           placeholder="Personal Email" required="false" name="personalEmail">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="personalPhone"
+                                           placeholder="Mobile Number" required="false" name="mobileNo">
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="address1" placeholder="Address Line 1"
                                            required="true" name="addressLine1">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="address2"
-                                           placeholder="Address Line 2"
+                                    <input type="text" class="form-control" id="address2" placeholder="Address Line 2"
                                            required="true" name="addressLine2">
                                 </div>
-                                <div class="form-row">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="pincode"
-                                               placeholder="Pincode"
+
+                                <div class="input-group form-group">
+                                        <input type="text" class="form-control" id="pincode" placeholder="Pincode"
                                                required="true" name="pincode">
-                                    </div>
-                                    <div class="form-group">
                                         <input type="text" class="form-control" id="city" placeholder="City"
                                                required="true" name="city">
-                                    </div>
                                 </div>
+
                                 <div class="form-group">
                                     <select class="custom-select" id="statesList" name="state">
                                         <option value="">Select State</option>
-                                        <option value="Andaman and Nicobar Islands">Andaman and Nicobar
-                                            Islands
-                                        </option>
+                                        <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
                                         <option value="Andhra Pradesh">Andhra Pradesh</option>
                                         <option value="Arunachal Pradesh">Arunachal Pradesh</option>
                                         <option value="Assam">Assam</option>
@@ -269,11 +363,11 @@
                                         <option value="West Bengal">West Bengal</option>
                                     </select>
                                 </div>
+
                                 <div class="form-group">
-                                            <textarea class="form-control" id="experienceDesc"
-                                                      placeholder="Experience" name="experienceDesc"></textarea>
+                                    <textarea class="form-control" id="experienceDescription"
+                                              placeholder="Please describe your experience" name="experienceDesc"></textarea>
                                 </div>
-                            </div>
                             </form>
                         </div>
                     </div>
