--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -60,40 +60,40 @@
         <div class="container-fluid section">
             <!--        <div class="col section-team">-->
             <div class="row section-heading">
-                Team Details
+                <strong>{{ team_name}}</strong> &nbsp;({{ reg_no }}).
             </div>
-            <div class="row">
-                <div class="container-fluid">
-                    <!--                    <div class="col">-->
-                    <div class="row team-card-wrapper">
-                        {% for member in members %}
-                            <div class="col team-card">
-                                <div class="team-card-header">
-                                    Member {{ forloop.counter }}
-                                    {% if forloop.counter == 1 %}
-                                        (Mentor)
-                                    {% endif %}
-                                </div>
-                                <div class="member-name">
-                                    {{ member.first_name }} {{ member.last_name }}
-                                </div>
-                                <div class="member-college">
-                                    {{ member.university }}
-                                </div>
-                                <div class="member-specialization">
-                                    Specialization: {{ member.specialization }}
-                                </div>
-                                <div class="member-email">
-                                    {{ member.email }} <br/>
-                                    {{ member.phone }}
-                                </div>
-                            </div>
-                        {% endfor %}
-
-                    </div>
-                    <!--                    </div>-->
-                </div>
-            </div>
+{#            <div class="row">#}
+{#                <div class="container-fluid">#}
+{#                    <!--                    <div class="col">-->#}
+{#                    <div class="row team-card-wrapper">#}
+{#                        {% for member in members %}#}
+{#                            <div class="col team-card">#}
+{#                                <div class="team-card-header">#}
+{#                                    Member {{ forloop.counter }}#}
+{#                                    {% if forloop.counter == 1 %}#}
+{#                                        (Mentor)#}
+{#                                    {% endif %}#}
+{#                                </div>#}
+{#                                <div class="member-name">#}
+{#                                    {{ member.first_name }} {{ member.last_name }}#}
+{#                                </div>#}
+{#                                <div class="member-college">#}
+{#                                    {{ member.university }}#}
+{#                                </div>#}
+{#                                <div class="member-specialization">#}
+{#                                    Specialization: {{ member.specialization }}#}
+{#                                </div>#}
+{#                                <div class="member-email">#}
+{#                                    {{ member.email }} <br/>#}
+{#                                    {{ member.phone }}#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        {% endfor %}#}
+{##}
+{#                    </div>#}
+{#                    <!--                    </div>-->#}
+{#                </div>#}
+{#            </div>#}
             <!--        </div>-->
         </div>
     </div>
@@ -512,7 +512,8 @@
                                 </div>
                                 <div class="form-group row" style="text-align: right">
                                     <div class="col-sm-12">
-                                        <button type="submit" class="btn btn-dark" id="survey-button">Save Responses</button>
+                                        <button type="submit" class="btn btn-dark" id="survey-button">Save Responses
+                                        </button>
                                     </div>
                                 </div>
                             </form>
@@ -568,9 +569,9 @@
                 [DOCKERFILE]: 'Dockerfile',
                 [PROGRAM_FILE]: 'Python/Zip File',
                 [PPT]: 'PPT/PPTX File',
-
-	   // Disable survey if already taken.
-	          if (checkForSurvey()) {
+            }
+            // Disable survey if already taken.
+            if (checkForSurvey()) {
                 $('#survey-button').attr('disabled', 'disabled');
             }
 
@@ -637,6 +638,8 @@
                 }
 
                 switch (extension) {
+                    case 'dockerfile':
+                        return DOCKERFILE
                     case 'py':
                         return PROGRAM_FILE
                     case 'R':
